objects/CORE_BrandQualitySize__c.object
<CustomObject>
    <description>CORE object</description>
    <fields>
        <fullName>CORE_BrandQuality__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand Quality</label>
        <referenceTo>CORE_BrandQuality__c</referenceTo>
        <relationshipLabel>Brand Quality Sizes</relationshipLabel>
        <relationshipName>BrandQualitySizes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CORE_DAMAssetId__c</fullName>
        <label>DAMAssetId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CORE_Id__c</fullName>
        <externalId>true</externalId>
        <label>MDMId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CORE_PIM_ID__c</fullName>
        <externalId>true</externalId>
        <label>PIM ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CORE_Size__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Size</label>
        <referenceTo>CORE_Size__c</referenceTo>
        <relationshipName>BrandQualitySizes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Brand Quality Size</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Brand Quality Size Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Quality Sizes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>